--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
 		<java.version>15</java.version>
 		<springdoc-openapi-ui.version>1.5.9</springdoc-openapi-ui.version>
 		<mybatis-spring-boot-starter.version>2.2.0</mybatis-spring-boot-starter.version>
-		<vavr.version>0.10.3</vavr.version>
 	</properties>
 
 	<dependencies>
@@ -82,9 +81,9 @@
 			<version>${gson.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>io.vavr</groupId>
-			<artifactId>vavr</artifactId>
-			<version>${vavr.version}</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -136,14 +135,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
-				<configuration>
-					<systemProperties>
-						<property>
-							<name>log4j.configurationFile</name>
-							<value>src/test/java/TEST-log4j2.xml</value>
-						</property>
-					</systemProperties>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
